--- a/client/src/components/Products.css
+++ b/client/src/components/Products.css
@@ -23,7 +23,6 @@ body {
 
 .card {
   width: 300px;
-  height: 440px;
   border-radius: 5px;
   -webkit-box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2);
@@ -103,7 +102,7 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 1;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   font-size: 14px;
   padding: 5px;
@@ -127,5 +126,25 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 5px;
+}
+
+.card-stars {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0.2rem;
+  width: 33%;
+}
+
+.card-stars img {
+  width: 20px;
+  height: 20px;
 }
 /*# sourceMappingURL=Products.css.map */
