--- a/client/src/components/Products.scss
+++ b/client/src/components/Products.scss
@@ -12,14 +12,12 @@ body {
   grid-gap: 20px;
   margin: 20px;
   justify-items: center;
- align-items: center;
- margin-top: 50px;
-  
+  align-items: center;
+  margin-top: 50px;
 }
 
 .card {
   width: 300px;
-  height: 440px;
   border-radius: 5px;
   box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2);
 }
@@ -78,32 +76,42 @@ body {
 }
 
 .card-title {
-    h4 {
-        // make overflow hidden in word
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 1;
-        -webkit-box-orient: vertical;
-        font-size: 14px;
-        padding: 5px;
-
-    }
-}
-.card-description {
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
+  h4 {
+    // make overflow hidden in word
     overflow: hidden;
     text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    font-size: 14px;
+    padding: 5px;
+  }
+}
+.card-description {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-
-
 .card-footer {
-    display: grid;
-    grid-template-rows: repeat(auto-fill, minmax(100px, 1fr));
-    grid-gap: 10px;
-    justify-items: center;
-    align-items: center;
+  display: grid;
+  grid-template-rows: repeat(auto-fill, minmax(100px, 1fr));
+  grid-gap: 10px;
+  justify-items: center;
+  align-items: center;
+  padding: 5px;
+}
+
+.card-stars {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.2rem;
+  width: 33%;
+  img {
+    width: 20px;
+    height: 20px;
+  }
 }
