--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -13,7 +13,19 @@ header {
   align-items: center;
   
   img {
-    height: 50px;
+    height: 60px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .logo {
+    display: none;
+  }
+  header {
+    grid-template-columns: 1fr 1fr;
+  }
+  .search {
+    padding: 1rem;
   }
 }
 
@@ -24,20 +36,24 @@ header {
     height: 50px;
     border: none;
     border-radius: 5px;
-    padding: 0 0.5rem;
+    padding: 0 0.7rem;
     font-size: 1.2rem;
     background-color: #f5f5f5;
     color: #333;
+    &:focus{
+      outline: none;
+    }
   }
   button {
     border: none;
     border-radius: 5px;
-    background-color: #4a48c9;
     cursor: pointer;
-    transition: all 2s;
+    transition: all .5s;
+    font-size: 1rem;
+    background: none;
     &:hover {
-        color : #fff;
         cursor: pointer;
+        background: #f5f5f5;
     }
 
 
@@ -48,6 +64,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
     
     img {
       height: 30px;
@@ -56,15 +73,15 @@ header {
   span {
     position: absolute;
     transform: translateX(8px);
-    font-size: 10px;
+    font-size: .9rem;
     line-height: 0;
-    font-weight: 500;
-    color: #fff;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
     padding: 1em 0.7em;
     border-radius: 100vh;
     background-color: #ff5a5f;
-    top: .1px;
     margin-left: 20px;
+    margin-bottom: 40px;
   }
 
 
