--- a/client/src/components/Products/Products.css
+++ b/client/src/components/Products/Products.css
@@ -64,7 +64,7 @@ body {
   font-size: 14px;
 }
 
-.view-btn a {
+.view-btn span {
   padding: 5px 15px;
   border: 1.5px solid #007bff;
   border-radius: 3px;
@@ -84,7 +84,7 @@ body {
           align-items: center;
 }
 
-.btn-group .btn a {
+.btn-group .btn span {
   padding: 5px 15px;
   background-color: #28a745;
   color: #fff;
@@ -106,6 +106,13 @@ body {
   -webkit-box-orient: vertical;
   font-size: 14px;
   padding: 5px;
+}
+
+.card-title span {
+  font-size: 14px;
+  color: #3d3d3d;
+  margin-left: 5px;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .card-description {
@@ -146,9 +153,79 @@ body {
 .card-stars img {
   width: 20px;
   height: 20px;
+  margin-right: 10px;
 }
 
 .btn {
   cursor: pointer;
+}
+
+.card-footer-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.card-votes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0.2rem;
+  width: 33%;
+}
+
+.card-votes img {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.category-container {
+  padding: 1rem;
+  margin: 0 auto;
+  width: 80%;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.category-container .category {
+  padding: 0.3rem;
+  border-radius: 5px;
+  font-size: 14px;
+  margin: 0.5rem;
+}
+
+.category-container .category .item {
+  cursor: pointer;
+  font-family: 'Courier New', Courier, monospace;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  background-color: #fff;
+}
+
+.category-container .category .item:hover {
+  color: #000;
 }
 /*# sourceMappingURL=Products.css.map */
